k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project1
  labels:
    istio-injection: enabled
