k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: project1
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  ports:
  - name: http   # 🔥 IMPORTANT (for ServiceMonitor)
    port: 80
    targetPort: 8080
