k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: addressbook
  namespace: addressbook
spec:
  hosts:
    - hello
    - hello.hello.svc.cluster.local
    - hello.192.168.56.101.nip.io   # 🔥 your ingress domain
  gateways:
    - istio-system/istio-gateway
  http:
    - route:
        - destination:
            host: addressbook
            port:
              number: 80
